--- a/style2.css
+++ b/style2.css
@@ -18,3 +18,10 @@ a:visited {
 a:hover {
     color: #333;
 }
+
+table, tr, td, th, caption{
+    border: 1px solid #eee;
+    font-family: 'Courier New', Courier, monospace;
+    border-collapse: collapse;
+    padding: 0.5rem;
+}
